change status code when fail update projects because unexcpected code from gh
